Refactor Admin Package
Refactored Admin Package.